[gd_scene load_steps=23 format=2]

[ext_resource path="res://scripts/levelSelect.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/slkscr.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/control/GameSave.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/gfx/Grass.png" type="Texture" id=4]
[ext_resource path="res://assets/gfx/Water.png" type="Texture" id=5]
[ext_resource path="res://scenes/objects/interactable/ButtonBlue.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/objects/interactable/ButtonRed.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/objects/Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/gfx/play_button.png" type="Texture" id=9]
[ext_resource path="res://scenes/objects/interactable/EndTeleport.tscn" type="PackedScene" id=10]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 16, 0, 16, 8.07225, 0.0158901, 8.00975 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 8, 15.9375, 7.9375, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 8.1875, 0.0625, 8.25, 15.9375, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 7.875, 0, 16, 0, 16, 16, 8.1875, 16 )

[sub_resource type="TileSet" id=1]
0/name = "Grass.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 16, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Grass.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Grass.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Grass.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 48, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Grass.png 4"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 64, 0, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Grass.png 5"
5/texture = ExtResource( 4 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 80, 0, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "Grass.png 6"
6/texture = ExtResource( 4 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 16, 48, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "Grass.png 7"
7/texture = ExtResource( 4 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 32, 48, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "Grass.png 8"
8/texture = ExtResource( 4 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 48, 48, 16, 16 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "Grass.png 9"
9/texture = ExtResource( 4 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 16, 64, 16, 16 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "Grass.png 10"
10/texture = ExtResource( 4 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 32, 64, 16, 16 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "Grass.png 11"
11/texture = ExtResource( 4 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 48, 64, 16, 16 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "Grass.png 12"
12/texture = ExtResource( 4 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 16, 80, 16, 16 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "Grass.png 13"
13/texture = ExtResource( 4 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 32, 80, 16, 16 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "Grass.png 14"
14/texture = ExtResource( 4 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 48, 80, 16, 16 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
15/name = "Grass.png 15"
15/texture = ExtResource( 4 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 112, 64, 16, 16 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0
16/name = "Grass.png 16"
16/texture = ExtResource( 4 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 96, 64, 16, 16 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape_one_way = false
16/shape_one_way_margin = 0.0
16/shapes = [  ]
16/z_index = 0
17/name = "Grass.png 17"
17/texture = ExtResource( 4 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 112, 80, 16, 16 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape_one_way = false
17/shape_one_way_margin = 0.0
17/shapes = [  ]
17/z_index = 0
18/name = "Grass.png 18"
18/texture = ExtResource( 4 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 96, 80, 16, 16 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shape_offset = Vector2( 0, 0 )
18/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
18/shape_one_way = false
18/shape_one_way_margin = 0.0
18/shapes = [  ]
18/z_index = 0
19/name = "Grass.png 19"
19/texture = ExtResource( 4 )
19/tex_offset = Vector2( 0, 0 )
19/modulate = Color( 1, 1, 1, 1 )
19/region = Rect2( 64, 64, 16, 16 )
19/tile_mode = 0
19/occluder_offset = Vector2( 0, 0 )
19/navigation_offset = Vector2( 0, 0 )
19/shape_offset = Vector2( 0, 0 )
19/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
19/shape_one_way = false
19/shape_one_way_margin = 0.0
19/shapes = [  ]
19/z_index = 0
20/name = "Grass.png 20"
20/texture = ExtResource( 4 )
20/tex_offset = Vector2( 0, 0 )
20/modulate = Color( 1, 1, 1, 1 )
20/region = Rect2( 80, 64, 16, 16 )
20/tile_mode = 0
20/occluder_offset = Vector2( 0, 0 )
20/navigation_offset = Vector2( 0, 0 )
20/shape_offset = Vector2( 0, 0 )
20/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
20/shape_one_way = false
20/shape_one_way_margin = 0.0
20/shapes = [  ]
20/z_index = 0
21/name = "Grass.png 21"
21/texture = ExtResource( 4 )
21/tex_offset = Vector2( 0, 0 )
21/modulate = Color( 1, 1, 1, 1 )
21/region = Rect2( 64, 80, 16, 16 )
21/tile_mode = 0
21/occluder_offset = Vector2( 0, 0 )
21/navigation_offset = Vector2( 0, 0 )
21/shape_offset = Vector2( 0, 0 )
21/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
21/shape_one_way = false
21/shape_one_way_margin = 0.0
21/shapes = [  ]
21/z_index = 0
22/name = "Grass.png 22"
22/texture = ExtResource( 4 )
22/tex_offset = Vector2( 0, 0 )
22/modulate = Color( 1, 1, 1, 1 )
22/region = Rect2( 80, 80, 16, 16 )
22/tile_mode = 0
22/occluder_offset = Vector2( 0, 0 )
22/navigation_offset = Vector2( 0, 0 )
22/shape_offset = Vector2( 0, 0 )
22/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
22/shape_one_way = false
22/shape_one_way_margin = 0.0
22/shapes = [  ]
22/z_index = 0
23/name = "Grass.png 23"
23/texture = ExtResource( 4 )
23/tex_offset = Vector2( 0, 0 )
23/modulate = Color( 1, 1, 1, 1 )
23/region = Rect2( 128, 0, 16, 16 )
23/tile_mode = 0
23/occluder_offset = Vector2( 0, 0 )
23/navigation_offset = Vector2( 0, 0 )
23/shape_offset = Vector2( 0, 0 )
23/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
23/shape = SubResource( 2 )
23/shape_one_way = false
23/shape_one_way_margin = 1.0
23/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
23/z_index = 0
24/name = "Grass.png 24"
24/texture = ExtResource( 4 )
24/tex_offset = Vector2( 0, 0 )
24/modulate = Color( 1, 1, 1, 1 )
24/region = Rect2( 16, 32, 16, 16 )
24/tile_mode = 0
24/occluder_offset = Vector2( 0, 0 )
24/navigation_offset = Vector2( 0, 0 )
24/shape_offset = Vector2( 0, 0 )
24/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
24/shape = SubResource( 13 )
24/shape_one_way = false
24/shape_one_way_margin = 1.0
24/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
24/z_index = 0
25/name = "Grass.png 25"
25/texture = ExtResource( 4 )
25/tex_offset = Vector2( 0, 0 )
25/modulate = Color( 1, 1, 1, 1 )
25/region = Rect2( 32, 32, 16, 16 )
25/tile_mode = 0
25/occluder_offset = Vector2( 0, 0 )
25/navigation_offset = Vector2( 0, 0 )
25/shape_offset = Vector2( 0, 0 )
25/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
25/shape = SubResource( 5 )
25/shape_one_way = false
25/shape_one_way_margin = 1.0
25/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
25/z_index = 0
26/name = "Grass.png 26"
26/texture = ExtResource( 4 )
26/tex_offset = Vector2( 0, 0 )
26/modulate = Color( 1, 1, 1, 1 )
26/region = Rect2( 128, 16, 16, 16 )
26/tile_mode = 0
26/occluder_offset = Vector2( 0, 0 )
26/navigation_offset = Vector2( 0, 0 )
26/shape_offset = Vector2( 0, 0 )
26/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
26/shape = SubResource( 11 )
26/shape_one_way = false
26/shape_one_way_margin = 1.0
26/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
26/z_index = 0
27/name = "Grass.png 27"
27/texture = ExtResource( 4 )
27/tex_offset = Vector2( 0, 0 )
27/modulate = Color( 1, 1, 1, 1 )
27/region = Rect2( 144, 16, 16, 16 )
27/tile_mode = 0
27/occluder_offset = Vector2( 0, 0 )
27/navigation_offset = Vector2( 0, 0 )
27/shape_offset = Vector2( 0, 0 )
27/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
27/shape = SubResource( 10 )
27/shape_one_way = false
27/shape_one_way_margin = 1.0
27/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
27/z_index = 0

[sub_resource type="DynamicFont" id=18]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 18 )

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=17]
size = 13
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="levelSelect" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
margin_left = -276.0
margin_top = -187.0
margin_right = 748.0
margin_bottom = 538.0
texture = ExtResource( 5 )
stretch_mode = 2

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
show_collision = true
format = 1
tile_data = PoolIntArray( -196600, 25, 0, -196589, 24, 0, -65536, 25, 0, 26, 24, 0, 65543, 25, 0, 65551, 25, 0, 196608, 24, 0, 196610, 23, 0, 196611, 23, 0, 196612, 23, 0, 196613, 23, 0, 196616, 23, 0, 196617, 23, 0, 196618, 23, 0, 196619, 23, 0, 196622, 23, 0, 196623, 23, 0, 196624, 23, 0, 196625, 23, 0, 196628, 23, 0, 196629, 23, 0, 196630, 23, 0, 196631, 23, 0, 196634, 23, 0, 196635, 23, 0, 196636, 23, 0, 196637, 23, 0, 262146, 23, 0, 262147, 6, 0, 262148, 8, 0, 262149, 23, 0, 262152, 23, 0, 262153, 6, 0, 262154, 8, 0, 262155, 23, 0, 262158, 23, 0, 262159, 6, 0, 262160, 8, 0, 262161, 23, 0, 262164, 23, 0, 262165, 6, 0, 262166, 8, 0, 262167, 23, 0, 262170, 23, 0, 262171, 6, 0, 262172, 8, 0, 262173, 23, 0, 327680, 23, 0, 327681, 23, 0, 327682, 23, 0, 327683, 9, 0, 327684, 11, 0, 327685, 23, 0, 327686, 23, 0, 327687, 23, 0, 327688, 23, 0, 327689, 9, 0, 327690, 11, 0, 327691, 23, 0, 327692, 23, 0, 327693, 23, 0, 327694, 23, 0, 327695, 9, 0, 327696, 11, 0, 327697, 23, 0, 327698, 23, 0, 327699, 23, 0, 327700, 23, 0, 327701, 9, 0, 327702, 11, 0, 327703, 23, 0, 327704, 23, 0, 327705, 23, 0, 327706, 23, 0, 327707, 9, 0, 327708, 11, 0, 327709, 23, 0, 393216, 23, 0, 393217, 6, 0, 393218, 7, 0, 393219, 22, 0, 393220, 21, 0, 393221, 7, 0, 393222, 7, 0, 393223, 7, 0, 393224, 7, 0, 393225, 22, 0, 393226, 21, 0, 393227, 7, 0, 393228, 7, 0, 393229, 7, 0, 393230, 7, 0, 393231, 22, 0, 393232, 21, 0, 393233, 7, 0, 393234, 7, 0, 393235, 7, 0, 393236, 7, 0, 393237, 22, 0, 393238, 21, 0, 393239, 7, 0, 393240, 7, 0, 393241, 7, 0, 393242, 7, 0, 393243, 22, 0, 393244, 11, 0, 393245, 23, 0, 458752, 23, 0, 458753, 9, 0, 458754, 4, 0, 458755, 1, 0, 458756, 0, 0, 458757, 5, 0, 458758, 10, 0, 458759, 10, 0, 458760, 10, 0, 458761, 10, 0, 458762, 10, 0, 458763, 10, 0, 458764, 10, 0, 458765, 10, 0, 458766, 10, 0, 458767, 10, 0, 458768, 10, 0, 458769, 10, 0, 458770, 10, 0, 458771, 10, 0, 458772, 10, 0, 458773, 10, 0, 458774, 10, 0, 458775, 10, 0, 458776, 10, 0, 458777, 10, 0, 458778, 10, 0, 458779, 10, 0, 458780, 11, 0, 458781, 23, 0, 458784, 25, 0, 524288, 23, 0, 524289, 12, 0, 524290, 13, 0, 524291, 13, 0, 524292, 13, 0, 524293, 13, 0, 524294, 13, 0, 524295, 13, 0, 524296, 13, 0, 524297, 13, 0, 524298, 13, 0, 524299, 13, 0, 524300, 13, 0, 524301, 13, 0, 524302, 13, 0, 524303, 13, 0, 524304, 13, 0, 524305, 13, 0, 524306, 13, 0, 524307, 13, 0, 524308, 13, 0, 524309, 13, 0, 524310, 13, 0, 524311, 13, 0, 524312, 13, 0, 524313, 13, 0, 524314, 20, 0, 524315, 2, 0, 524316, 11, 0, 524317, 23, 0, 524318, 23, 0, 524319, 23, 0, 524324, 24, 0, 589824, 23, 0, 589825, 23, 0, 589826, 23, 0, 589827, 23, 0, 589828, 23, 0, 589829, 23, 0, 589830, 23, 0, 589831, 23, 0, 589832, 23, 0, 589833, 23, 0, 589834, 23, 0, 589835, 23, 0, 589836, 23, 0, 589837, 23, 0, 589838, 23, 0, 589839, 23, 0, 589840, 23, 0, 589841, 23, 0, 589842, 23, 0, 589843, 23, 0, 589844, 23, 0, 589845, 23, 0, 589846, 23, 0, 589847, 23, 0, 589848, 23, 0, 589849, 23, 0, 589850, 9, 0, 589851, 5, 0, 589852, 21, 0, 589853, 7, 0, 589854, 8, 0, 589855, 23, 0, 655385, 23, 0, 655386, 9, 0, 655387, 2, 0, 655388, 19, 0, 655389, 13, 0, 655390, 14, 0, 655391, 23, 0, 655392, 6, 0, 655393, 7, 0, 655394, 8, 0, 720904, 6, 0, 720905, 8, 0, 720908, 24, 0, 720912, 6, 0, 720913, 8, 0, 720918, 25, 0, 720921, 23, 0, 720922, 9, 0, 720923, 2, 0, 720924, 11, 0, 720925, 23, 0, 720926, 23, 0, 720927, 23, 0, 720928, 12, 0, 720929, 13, 0, 720930, 14, 0, 786436, 24, 0, 786440, 9, 0, 786441, 11, 0, 786448, 12, 0, 786449, 14, 0, 786457, 23, 0, 786458, 9, 0, 786459, 2, 0, 786460, 11, 0, 786461, 23, 0, 851976, 9, 0, 851977, 11, 0, 851991, 6, 0, 851992, 8, 0, 851993, 23, 0, 851994, 9, 0, 851995, 2, 0, 851996, 11, 0, 851997, 23, 0, 917504, 6, 0, 917505, 8, 0, 917512, 9, 0, 917513, 21, 0, 917514, 7, 0, 917515, 7, 0, 917516, 7, 0, 917517, 7, 0, 917518, 8, 0, 917527, 12, 0, 917528, 14, 0, 917529, 23, 0, 917530, 9, 0, 917531, 2, 0, 917532, 11, 0, 917533, 23, 0, 917534, 23, 0, 917535, 23, 0, 983040, 12, 0, 983041, 14, 0, 983048, 12, 0, 983049, 13, 0, 983050, 13, 0, 983051, 13, 0, 983052, 13, 0, 983053, 13, 0, 983054, 14, 0, 983065, 23, 0, 983066, 9, 0, 983067, 2, 0, 983068, 21, 0, 983069, 7, 0, 983070, 8, 0, 983071, 23, 0, 983072, 24, 0, 1048598, 23, 0, 1048599, 23, 0, 1048600, 23, 0, 1048601, 23, 0, 1048602, 9, 0, 1048603, 3, 0, 1048604, 19, 0, 1048605, 13, 0, 1048606, 14, 0, 1048607, 23, 0, 1114117, 6, 0, 1114118, 8, 0, 1114134, 23, 0, 1114135, 6, 0, 1114136, 7, 0, 1114137, 7, 0, 1114138, 22, 0, 1114139, 2, 0, 1114140, 11, 0, 1114141, 23, 0, 1114142, 23, 0, 1114143, 23, 0, 1179649, 24, 0, 1179653, 9, 0, 1179654, 11, 0, 1179670, 23, 0, 1179671, 9, 0, 1179672, 5, 0, 1179673, 2, 0, 1179674, 2, 0, 1179675, 2, 0, 1179676, 11, 0, 1179677, 23, 0, 1245189, 12, 0, 1245190, 14, 0, 1245206, 23, 0, 1245207, 12, 0, 1245208, 13, 0, 1245209, 13, 0, 1245210, 13, 0, 1245211, 13, 0, 1245212, 14, 0, 1245213, 23, 0, 1310742, 23, 0, 1310743, 23, 0, 1310744, 23, 0, 1310745, 23, 0, 1310746, 23, 0, 1310747, 23, 0, 1310748, 23, 0, 1310749, 23, 0, 1441797, 24, 0, 1441823, 6, 0, 1441824, 8, 0, 1507359, 12, 0, 1507360, 14, 0, 1572891, 24, 0, 1703955, 6, 0, 1703956, 7, 0, 1703957, 7, 0, 1703958, 7, 0, 1703959, 7, 0, 1703960, 8, 0, 1769486, 24, 0, 1769491, 12, 0, 1769492, 13, 0, 1769493, 13, 0, 1769494, 13, 0, 1769495, 13, 0, 1769496, 14, 0 )

[node name="level_switch1" parent="TileMap" instance=ExtResource( 6 )]
position = Vector2( 64, 79 )

[node name="level_switch2" parent="TileMap" instance=ExtResource( 6 )]
position = Vector2( 160, 78 )

[node name="level_switch3" parent="TileMap" instance=ExtResource( 6 )]
position = Vector2( 256, 77 )

[node name="level_switch4" parent="TileMap" instance=ExtResource( 6 )]
position = Vector2( 353, 78 )

[node name="level_switch5" parent="TileMap" instance=ExtResource( 6 )]
position = Vector2( 448, 79 )

[node name="level_switch6" parent="TileMap" instance=ExtResource( 6 )]
position = Vector2( 481, 159 )

[node name="level_switch7" parent="TileMap" instance=ExtResource( 6 )]
position = Vector2( 481, 255 )

[node name="red_switch" parent="TileMap" instance=ExtResource( 7 )]
position = Vector2( 385, 296 )

[node name="level1_Button" type="Button" parent="."]
visible = false
margin_left = 18.0
margin_top = 32.0
margin_right = 117.0
margin_bottom = 55.0
theme = SubResource( 4 )
disabled = true
text = "Level 1"
icon = ExtResource( 9 )

[node name="level2_Button" type="Button" parent="."]
visible = false
margin_left = 110.0
margin_top = 35.0
margin_right = 210.0
margin_bottom = 58.0
theme = SubResource( 4 )
disabled = true
text = "Level 2"
icon = ExtResource( 9 )

[node name="level3_Button" type="Button" parent="."]
visible = false
margin_left = 205.0
margin_top = 37.0
margin_right = 305.0
margin_bottom = 60.0
theme = SubResource( 4 )
disabled = true
text = "Level 3"
icon = ExtResource( 9 )

[node name="level4_Button" type="Button" parent="."]
visible = false
margin_left = 297.0
margin_top = 37.0
margin_right = 397.0
margin_bottom = 60.0
theme = SubResource( 4 )
disabled = true
text = "Level 4"
icon = ExtResource( 9 )

[node name="level5_Button" type="Button" parent="."]
visible = false
margin_left = 393.0
margin_top = 37.0
margin_right = 493.0
margin_bottom = 60.0
theme = SubResource( 4 )
disabled = true
text = "Level 5"
icon = ExtResource( 9 )

[node name="level6_Button" type="Button" parent="."]
visible = false
margin_left = 501.0
margin_top = 149.0
margin_right = 601.0
margin_bottom = 172.0
theme = SubResource( 4 )
disabled = true
text = "Level 6"
icon = ExtResource( 9 )

[node name="level7_Button" type="Button" parent="."]
visible = false
margin_left = 500.0
margin_top = 244.0
margin_right = 600.0
margin_bottom = 267.0
theme = SubResource( 4 )
disabled = true
text = "Level 7"
icon = ExtResource( 9 )

[node name="end_world_button" type="Button" parent="."]
visible = false
margin_left = 256.0
margin_top = 284.0
margin_right = 366.0
margin_bottom = 307.0
theme = SubResource( 4 )
disabled = true
text = "???????"
icon = ExtResource( 9 )

[node name="GameSave" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="." instance=ExtResource( 8 )]
position = Vector2( 34, 116 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -191.0
margin_top = -57.0
margin_right = 2.0
margin_bottom = 329.0
color = Color( 0.333333, 0.25098, 0.25098, 0.6 )

[node name="back_Button" type="Button" parent="ColorRect"]
margin_left = 71.0
margin_top = 266.0
margin_right = 189.0
margin_bottom = 289.0
theme = SubResource( 4 )
text = "Exit"

[node name="Title" type="Label" parent="ColorRect"]
margin_left = 79.0
margin_top = 62.0
margin_right = 182.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 16 )
text = "Save
The
Bees
----------"
align = 1
uppercase = true

[node name="EndTeleport" parent="ColorRect/Title" instance=ExtResource( 10 )]
position = Vector2( 10, 25 )

[node name="EndTeleport2" parent="ColorRect/Title" instance=ExtResource( 10 )]
position = Vector2( 94, 25 )

[node name="InitialInstructions" type="Label" parent="ColorRect"]
margin_left = 68.0
margin_top = 139.0
margin_right = 191.0
margin_bottom = 255.0
custom_fonts/font = SubResource( 17 )
text = "Use WASD or
The Aarow 
keys to move
around and 
select a level

------>"
align = 1
uppercase = true

[node name="ButtonBlue" parent="ColorRect/InitialInstructions" instance=ExtResource( 6 )]
position = Vector2( 99, 101 )

[connection signal="pressed" from="TileMap/level_switch1" to="." method="_on_level_switch1_pressed"]
[connection signal="unpressed" from="TileMap/level_switch1" to="." method="_on_level_switch1_unpressed"]
[connection signal="pressed" from="TileMap/level_switch2" to="." method="_on_level_switch2_pressed"]
[connection signal="unpressed" from="TileMap/level_switch2" to="." method="_on_level_switch2_unpressed"]
[connection signal="pressed" from="TileMap/level_switch3" to="." method="_on_level_switch3_pressed"]
[connection signal="unpressed" from="TileMap/level_switch3" to="." method="_on_level_switch3_unpressed"]
[connection signal="pressed" from="TileMap/level_switch4" to="." method="_on_level_switch4_pressed"]
[connection signal="unpressed" from="TileMap/level_switch4" to="." method="_on_level_switch4_unpressed"]
[connection signal="pressed" from="TileMap/level_switch5" to="." method="_on_level_switch5_pressed"]
[connection signal="unpressed" from="TileMap/level_switch5" to="." method="_on_level_switch5_unpressed"]
[connection signal="pressed" from="TileMap/level_switch6" to="." method="_on_level_switch6_pressed"]
[connection signal="unpressed" from="TileMap/level_switch6" to="." method="_on_level_switch6_unpressed"]
[connection signal="pressed" from="TileMap/level_switch7" to="." method="_on_level_switch7_pressed"]
[connection signal="unpressed" from="TileMap/level_switch7" to="." method="_on_level_switch7_unpressed"]
[connection signal="pressed" from="TileMap/red_switch" to="." method="_on_red_switch_pressed"]
[connection signal="unpressed" from="TileMap/red_switch" to="." method="_on_red_switch_unpressed"]
[connection signal="pressed" from="level1_Button" to="." method="_on_level1_Button_pressed"]
[connection signal="pressed" from="level2_Button" to="." method="_on_level2_Button_pressed"]
[connection signal="pressed" from="level3_Button" to="." method="_on_level3_Button_pressed"]
[connection signal="pressed" from="level4_Button" to="." method="_on_level4_Button_pressed"]
[connection signal="pressed" from="level5_Button" to="." method="_on_level5_Button_pressed"]
[connection signal="pressed" from="level6_Button" to="." method="_on_level6_Button_pressed"]
[connection signal="pressed" from="level7_Button" to="." method="_on_level7_Button_pressed"]
[connection signal="pressed" from="end_world_button" to="." method="_on_end_world_button_pressed"]
[connection signal="pressed" from="ColorRect/back_Button" to="." method="_on_back_Button_pressed"]
